// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Searching Profiles E2E Tests will allow admins to list all profiles, including private 1`] = `
[
  "Abigayle.Jaskolski61",
  "Adalberto.Rau18",
  "Adelbert93",
  "Admin",
  "Alba.Keeling",
  "Alessia.Dietrich4",
  "Alicia.Lebsack68",
  "Amara.Ernser14",
  "Amina2",
  "Anna99",
  "Antonette.Dickens0",
  "Assunta.Kautzer",
  "Assunta61",
  "Augustine.Bartoletti",
  "Augustus.Schneider32",
  "Aurelia.Walsh",
  "Aurore.Tillman",
  "Aurore68",
  "Bartholome.Beer37",
  "Benedict.Stoltenberg",
  "Bernardo16",
  "Bernie67",
  "Berniece.Bayer",
  "Bette.Kuhn84",
  "Bo.Douglas49",
  "Brittany3",
  "Caitlyn.Zieme",
  "Carissa.Dooley",
  "Carlee.Skiles",
  "Carmen.Von13",
]
`;

exports[`Searching Profiles E2E Tests will allow anonymous users to list public profiles 1`] = `
[
  "Abigayle.Jaskolski61",
  "Amina2",
  "Assunta.Kautzer",
  "Aurore.Tillman",
  "Aurore68",
  "Bartholome.Beer37",
  "Bernardo16",
  "Bernie67",
  "Brittany3",
  "Casper.Hagenes5",
  "Chad.Turcotte17",
  "Clifton.Powlowski",
  "Dejah.Bechtelar33",
  "Dorian60",
  "Dorthy34",
  "Dwight90",
  "Elian33",
  "Emerson.Nikolaus72",
  "Ernesto96",
  "Euna86",
  "Felipe35",
  "Georgianna9",
  "Golda.Stark",
  "Herminio44",
  "Houston.Mante",
]
`;

exports[`Searching Profiles E2E Tests will list profiles when no query string parameters are provided 1`] = `
[
  "Abigayle.Jaskolski61",
  "Alicia.Lebsack68",
  "Amara.Ernser14",
  "Amina2",
  "Anna99",
  "Antonette.Dickens0",
  "Assunta.Kautzer",
  "Assunta61",
  "Aurelia.Walsh",
  "Aurore.Tillman",
]
`;

exports[`Searching Profiles E2E Tests will perform a text search for user profiles 1`] = `
[
  "Kendra.Gusikowski39",
  "Shad.Daniel29",
  "Novella.Reichel",
  "Sallie.Schultz",
]
`;

exports[`Searching Profiles E2E Tests will return a 400 response if the query string is invalid 1`] = `
{
  "issues": [
    {
      "code": "invalid_enum_value",
      "message": "Invalid enum value. Expected 'username' | 'memberSince', received 'asdf'",
      "options": [
        "username",
        "memberSince",
      ],
      "path": [
        "sortBy",
      ],
      "received": "asdf",
    },
    {
      "code": "invalid_enum_value",
      "message": "Invalid enum value. Expected 'asc' | 'desc', received '17'",
      "options": [
        "asc",
        "desc",
      ],
      "path": [
        "sortOrder",
      ],
      "received": "17",
    },
    {
      "code": "too_small",
      "exact": false,
      "inclusive": false,
      "message": "Number must be greater than 0",
      "minimum": 0,
      "path": [
        "limit",
      ],
      "type": "number",
    },
  ],
}
`;

exports[`Searching Profiles E2E Tests will sort results by memberSince in asc order 1`] = `
[
  "Magali.Friesen",
  "Georgianna9",
  "Houston.Mante",
  "Hiram.Renner1",
  "Roxanne58",
  "Winfield.Ebert",
  "Reuben.Langosh45",
  "Emmet.Rogahn58",
  "Kaitlin64",
  "Erik.Adams93",
  "Nikki.Murphy99",
  "Carissa.Dooley",
  "Dorian60",
  "Ernesto96",
  "Aurore.Tillman",
  "Lolita56",
  "Rosamond56",
  "Kristy54",
  "Lina.Hayes98",
  "Brittany3",
  "Antonette.Dickens0",
  "Chad.Turcotte17",
  "Euna86",
  "Davion90",
  "Emmitt4",
  "Josie.Sawayn44",
  "Kendrick.Lakin",
  "Jerald.Klein37",
  "Nicolas.Keeling",
  "Simone.Howe10",
  "Bartholome.Beer37",
  "Casper.Hagenes5",
  "Clifton.Powlowski",
  "Jenifer.Mitchell92",
  "Glenda.Gleichner",
  "Winifred.Feil",
  "Kylie64",
  "Selmer68",
  "Josianne54",
  "Novella.Reichel",
  "Sheridan.Kulas13",
  "Felipe35",
  "Elian33",
  "Anna99",
  "Van89",
  "Kristoffer.Feest",
  "Katrine.Kiehn69",
  "Immanuel.Davis12",
  "Sven.Schulist13",
  "Kelvin5",
  "Shad.Daniel29",
  "Velda42",
  "Kenna.Dare",
  "Tyra.Rutherford",
  "Sallie.Schultz",
  "Stephen.Goldner60",
  "Assunta61",
  "Golda.Stark",
  "Mellie.Berge79",
  "Aurelia.Walsh",
  "Imelda1",
  "Jake.Hermann65",
  "Aurore68",
  "Henriette14",
  "Elroy67",
  "Keanu.Klocko",
  "Amina2",
  "Hilda.Hodkiewicz",
  "Bernie67",
  "Zora.Stroman31",
  "Herminio44",
  "Hortense20",
  "Carson.Auer",
  "Lexie76",
  "Kendra.Gusikowski39",
  "Ernestina0",
  "Assunta.Kautzer",
  "Jace88",
  "Samanta.Cummings",
  "Julia.Little89",
  "Skye.Walter59",
  "Emerson.Nikolaus72",
  "Abigayle.Jaskolski61",
  "Maiya37",
  "Judson.Halvorson41",
  "Alicia.Lebsack68",
  "Maverick.Bauch14",
  "Yesenia.Wisozk",
  "Amara.Ernser14",
  "Leopoldo39",
  "Dwight90",
  "Elisha.Erdman",
  "Cora91",
  "Dejah.Bechtelar33",
  "Rahul.Feil",
  "Talia.Parisian94",
  "Natalie.Corwin",
  "Jaunita71",
  "Dorthy34",
  "Bernardo16",
]
`;

exports[`Searching Profiles E2E Tests will sort results by memberSince in desc order 1`] = `
[
  "Leopold59",
  "Bernardo16",
  "Dorthy34",
  "Jaunita71",
  "Natalie.Corwin",
  "Talia.Parisian94",
  "Rahul.Feil",
  "Dejah.Bechtelar33",
  "Cora91",
  "Elisha.Erdman",
  "Dwight90",
  "Leopoldo39",
  "Amara.Ernser14",
  "Yesenia.Wisozk",
  "Maverick.Bauch14",
  "Alicia.Lebsack68",
  "Judson.Halvorson41",
  "Maiya37",
  "Abigayle.Jaskolski61",
  "Emerson.Nikolaus72",
  "Skye.Walter59",
  "Julia.Little89",
  "Samanta.Cummings",
  "Jace88",
  "Assunta.Kautzer",
  "Ernestina0",
  "Kendra.Gusikowski39",
  "Lexie76",
  "Carson.Auer",
  "Hortense20",
  "Herminio44",
  "Zora.Stroman31",
  "Bernie67",
  "Hilda.Hodkiewicz",
  "Amina2",
  "Keanu.Klocko",
  "Elroy67",
  "Henriette14",
  "Aurore68",
  "Jake.Hermann65",
  "Imelda1",
  "Aurelia.Walsh",
  "Mellie.Berge79",
  "Golda.Stark",
  "Assunta61",
  "Stephen.Goldner60",
  "Sallie.Schultz",
  "Tyra.Rutherford",
  "Kenna.Dare",
  "Velda42",
  "Shad.Daniel29",
  "Kelvin5",
  "Sven.Schulist13",
  "Immanuel.Davis12",
  "Katrine.Kiehn69",
  "Kristoffer.Feest",
  "Van89",
  "Anna99",
  "Elian33",
  "Felipe35",
  "Sheridan.Kulas13",
  "Novella.Reichel",
  "Josianne54",
  "Selmer68",
  "Kylie64",
  "Winifred.Feil",
  "Glenda.Gleichner",
  "Jenifer.Mitchell92",
  "Clifton.Powlowski",
  "Casper.Hagenes5",
  "Bartholome.Beer37",
  "Simone.Howe10",
  "Nicolas.Keeling",
  "Jerald.Klein37",
  "Kendrick.Lakin",
  "Josie.Sawayn44",
  "Emmitt4",
  "Davion90",
  "Euna86",
  "Chad.Turcotte17",
  "Antonette.Dickens0",
  "Brittany3",
  "Lina.Hayes98",
  "Kristy54",
  "Rosamond56",
  "Lolita56",
  "Aurore.Tillman",
  "Ernesto96",
  "Dorian60",
  "Carissa.Dooley",
  "Nikki.Murphy99",
  "Erik.Adams93",
  "Kaitlin64",
  "Emmet.Rogahn58",
  "Reuben.Langosh45",
  "Winfield.Ebert",
  "Roxanne58",
  "Hiram.Renner1",
  "Houston.Mante",
  "Georgianna9",
]
`;

exports[`Searching Profiles E2E Tests will sort results by username in desc order 1`] = `
[
  "Zora.Stroman31",
  "Yesenia.Wisozk",
  "Winifred.Feil",
  "Winfield.Ebert",
  "Velda42",
  "Van89",
  "Tyra.Rutherford",
  "Talia.Parisian94",
  "Sven.Schulist13",
  "Stephen.Goldner60",
  "Skye.Walter59",
  "Simone.Howe10",
  "Sheridan.Kulas13",
  "Shad.Daniel29",
  "Selmer68",
  "Samanta.Cummings",
  "Sallie.Schultz",
  "Roxanne58",
  "Rosamond56",
  "Reuben.Langosh45",
  "Rahul.Feil",
  "Novella.Reichel",
  "Nikki.Murphy99",
  "Nicolas.Keeling",
  "Natalie.Corwin",
  "Mellie.Berge79",
  "Maverick.Bauch14",
  "Maiya37",
  "Magali.Friesen",
  "Lolita56",
  "Lina.Hayes98",
  "Lexie76",
  "Leopoldo39",
  "Leopold59",
  "Kylie64",
  "Kristy54",
  "Kristoffer.Feest",
  "Kenna.Dare",
  "Kendrick.Lakin",
  "Kendra.Gusikowski39",
  "Kelvin5",
  "Keanu.Klocko",
  "Katrine.Kiehn69",
  "Kaitlin64",
  "Julia.Little89",
  "Judson.Halvorson41",
  "Josie.Sawayn44",
  "Josianne54",
  "Jerald.Klein37",
  "Jenifer.Mitchell92",
  "Jaunita71",
  "Jake.Hermann65",
  "Jace88",
  "Immanuel.Davis12",
  "Imelda1",
  "Houston.Mante",
  "Hortense20",
  "Hiram.Renner1",
  "Hilda.Hodkiewicz",
  "Herminio44",
  "Henriette14",
  "Golda.Stark",
  "Glenda.Gleichner",
  "Georgianna9",
  "Felipe35",
  "Euna86",
  "Ernesto96",
  "Ernestina0",
  "Erik.Adams93",
  "Emmitt4",
  "Emmet.Rogahn58",
  "Emerson.Nikolaus72",
  "Elroy67",
  "Elisha.Erdman",
  "Elian33",
  "Dwight90",
  "Dorthy34",
  "Dorian60",
  "Dejah.Bechtelar33",
  "Davion90",
  "Cora91",
  "Clifton.Powlowski",
  "Chad.Turcotte17",
  "Casper.Hagenes5",
  "Carson.Auer",
  "Carissa.Dooley",
  "Brittany3",
  "Bernie67",
  "Bernardo16",
  "Bartholome.Beer37",
  "Aurore68",
  "Aurore.Tillman",
  "Aurelia.Walsh",
  "Assunta61",
  "Assunta.Kautzer",
  "Antonette.Dickens0",
  "Anna99",
  "Amina2",
  "Amara.Ernser14",
  "Alicia.Lebsack68",
]
`;

exports[`Searching Profiles E2E Tests will sort results by username in desc order 2`] = `
[
  "Zora.Stroman31",
  "Yesenia.Wisozk",
  "Winifred.Feil",
  "Winfield.Ebert",
  "Velda42",
  "Van89",
  "Tyra.Rutherford",
  "Talia.Parisian94",
  "Sven.Schulist13",
  "Stephen.Goldner60",
  "Skye.Walter59",
  "Simone.Howe10",
  "Sheridan.Kulas13",
  "Shad.Daniel29",
  "Selmer68",
  "Samanta.Cummings",
  "Sallie.Schultz",
  "Roxanne58",
  "Rosamond56",
  "Reuben.Langosh45",
  "Rahul.Feil",
  "Novella.Reichel",
  "Nikki.Murphy99",
  "Nicolas.Keeling",
  "Natalie.Corwin",
  "Mellie.Berge79",
  "Maverick.Bauch14",
  "Maiya37",
  "Magali.Friesen",
  "Lolita56",
  "Lina.Hayes98",
  "Lexie76",
  "Leopoldo39",
  "Leopold59",
  "Kylie64",
  "Kristy54",
  "Kristoffer.Feest",
  "Kenna.Dare",
  "Kendrick.Lakin",
  "Kendra.Gusikowski39",
  "Kelvin5",
  "Keanu.Klocko",
  "Katrine.Kiehn69",
  "Kaitlin64",
  "Julia.Little89",
  "Judson.Halvorson41",
  "Josie.Sawayn44",
  "Josianne54",
  "Jerald.Klein37",
  "Jenifer.Mitchell92",
  "Jaunita71",
  "Jake.Hermann65",
  "Jace88",
  "Immanuel.Davis12",
  "Imelda1",
  "Houston.Mante",
  "Hortense20",
  "Hiram.Renner1",
  "Hilda.Hodkiewicz",
  "Herminio44",
  "Henriette14",
  "Golda.Stark",
  "Glenda.Gleichner",
  "Georgianna9",
  "Felipe35",
  "Euna86",
  "Ernesto96",
  "Ernestina0",
  "Erik.Adams93",
  "Emmitt4",
  "Emmet.Rogahn58",
  "Emerson.Nikolaus72",
  "Elroy67",
  "Elisha.Erdman",
  "Elian33",
  "Dwight90",
  "Dorthy34",
  "Dorian60",
  "Dejah.Bechtelar33",
  "Davion90",
  "Cora91",
  "Clifton.Powlowski",
  "Chad.Turcotte17",
  "Casper.Hagenes5",
  "Carson.Auer",
  "Carissa.Dooley",
  "Brittany3",
  "Bernie67",
  "Bernardo16",
  "Bartholome.Beer37",
  "Aurore68",
  "Aurore.Tillman",
  "Aurelia.Walsh",
  "Assunta61",
  "Assunta.Kautzer",
  "Antonette.Dickens0",
  "Anna99",
  "Amina2",
  "Amara.Ernser14",
  "Alicia.Lebsack68",
]
`;
